# guanaqo

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: test.yml
1.0.0-alpha.24/Coverage/: cmd_line  index-sort-l.html  index.html
1.0.0-alpha.24/Doxygen/: annotated.html  annotated_dup.js  any-ptr_8hpp.html  any-ptr_8hpp__incl.map  any-ptr_8hpp__incl.md5  any-ptr_8hpp_source.html  assume_8hpp.html  assume_8hpp__dep__incl.md5  assume_8hpp__incl.map  assume_8hpp_source.html  atomic-stop-signal_8hpp.html  atomic-stop-signal_8hpp_source.html  blas-interface_8cpp.html  blas-interface_8cpp_source.html  blas-interface_8hpp.html  blas-interface_8hpp__dep__incl.md5  blas-interface_8hpp_source.html  blas_8hpp.html  blas_8hpp.js  blas_8hpp__dep__incl.md5  blas_8hpp__incl.md5  blas_8hpp_source.html  callback-streambuf_8hpp.html  callback-streambuf_8hpp__incl.map  callback-streambuf_8hpp_source.html  classes.html  classguanaqo_1_1AtomicStopSignal-members.html  classguanaqo_1_1AtomicStopSignal.html  classguanaqo_1_1AtomicStopSignal_a19152031294d00ae2b371bbb90e7766f_cgraph.md5  classguanaqo_1_1AtomicStopSignal_a55f91672a840950b9ef5ce48e5af682e_cgraph.map  classguanaqo_1_1CircularRange-members.html  classguanaqo_1_1CircularRange.html  classguanaqo_1_1CircularRange_a74850c7822e74e1316539dcc27182a0d_cgraph.map  classguanaqo_1_1CircularRange_a74850c7822e74e1316539dcc27182a0d_cgraph.md5  classguanaqo_1_1CircularRange_a8f06eb18bc0d2915ef8d112d609b7acf_icgraph.md5  classguanaqo_1_1CircularRange_aa94eb61dc17c5283da4db843a8132eb2_cgraph.md5  classguanaqo_1_1CircularRange_ad6a1e2894db085aacfcd0fef4ffd869f_cgraph.map  classguanaqo_1_1MaxHistory-members.html  classguanaqo_1_1MaxHistory.html  classguanaqo_1_1MaxHistory.js  (+788 more)
1.0.0-alpha.25/Coverage/: index-sort-l.html  index.html
1.0.0-alpha.25/Doxygen/: annotated.html  (+578 more)
Coverage/: index-sort-l.html  index.html
Doxygen/: annotated.html  any-ptr_8hpp.html  any-ptr_8hpp_source.html  assume_8hpp.html  assume_8hpp__dep__incl.map  assume_8hpp__incl.md5  assume_8hpp_source.html  atomic-stop-signal_8hpp.html  atomic-stop-signal_8hpp_source.html  blas-interface_8cpp.html  blas-interface_8cpp.js  blas-interface_8cpp__incl.map  blas-interface_8cpp_source.html  blas-interface_8hpp.html  blas-interface_8hpp.js  blas-interface_8hpp_source.html  blas_8hpp.html  blas_8hpp__incl.map  blas_8hpp_source.html  callback-streambuf_8hpp.html  callback-streambuf_8hpp_source.html  classes.html  classguanaqo_1_1AtomicStopSignal-members.html  classguanaqo_1_1AtomicStopSignal.html  classguanaqo_1_1CircularRange-members.html  classguanaqo_1_1CircularRange.html  classguanaqo_1_1CircularRange.js  classguanaqo_1_1CircularRange__coll__graph.map  classguanaqo_1_1CircularRange_aa94eb61dc17c5283da4db843a8132eb2_cgraph.map  classguanaqo_1_1CircularRange_ac9f731fa341102e4ceb3737963b93d28_icgraph.md5  classguanaqo_1_1CircularRange_ad14d249a73cf1b80747a6e02853c1baa_cgraph.md5  classguanaqo_1_1MaxHistory-members.html  classguanaqo_1_1MaxHistory.html  classguanaqo_1_1PrintMatrixView-members.html  classguanaqo_1_1PrintMatrixView.html  classguanaqo_1_1PrintMatrixView_a63eea1dde756aae14cfc43178cb57f8e_icgraph.map  classguanaqo_1_1PrintMatrixView_a63eea1dde756aae14cfc43178cb57f8e_icgraph.md5  classguanaqo_1_1ReverseCircularRange-members.html  classguanaqo_1_1ReverseCircularRange.html  classguanaqo_1_1TypeErased-members.html  (+809 more)
cmake/: Debug.cmake  DetectFeatures.cmake  Warnings.cmake  guanaqo-version.h.in  sccache.cmake
docs/: .gitignore  README.md
doxygen/: Doxyfile  Doxyfile.common  examples.md  groups.dox  index.md
scripts/: coverage.sh
src/: CMakeLists.txt
src/blas/: config.hpp.in
src/blas/include/guanaqo/blas/: blas-interface.hpp  blas.hpp  hl-blas-interface.hpp  lapack.hpp
src/blas/src/: blas-interface.cpp
src/cmake/: BLAS.cmake  BLASConfig.cmake.in  BuildTime.cmake  Config.cmake.in  CoreConfig.cmake.in  Install.cmake  guanaqo-build-time.cpp.in  guanaqo-version.h.in
src/include/guanaqo/: any-ptr.hpp  assume.hpp  atomic-stop-signal.hpp  callback-streambuf.hpp  compiler.h  copyable-unique_ptr.hpp  copyable_unique_ptr.hpp  demangled-typename.hpp  dl-flags.hpp  dl.hpp  duration-parse.hpp  enumerate.hpp  float.hpp  from_chars-wrapper.hpp  iter-adapter.hpp  lifetime.hpp  loop.hpp  lut.hpp  mat-view.hpp  max-history.hpp  noop-delete.hpp  not-implemented.hpp  openmp.h  possible-alias.hpp  preprocessor.h  print.hpp  required-method.hpp  ringbuffer.hpp  set-intersection.hpp  string-util.hpp  stringify.h  tag-invoke.hpp  timed-cpu.hpp  timed.hpp  trace.hpp  type-erasure.hpp  type-traits.hpp
src/include/guanaqo/eigen/: span.hpp  view.hpp
src/include/guanaqo/implementation/: print.tpp
src/include/guanaqo/implementation/io/: csv.tpp
src/include/guanaqo/io/: csv.hpp
src/include/guanaqo/linalg/: config.hpp  matrix-view.hpp  sparse-ops.hpp  sparsity-conversions.hpp  sparsity.hpp
src/include/guanaqo/linalg/eigen/: sparse.hpp
src/include/guanaqo/nanobind/: matrix-view.hpp
src/include/guanaqo/pcm/: counters.hpp
src/include/guanaqo/perfetto/: trace.hpp
src/include/guanaqo/quadmath/: .clang-format  quadmath-print.hpp  quadmath.hpp
src/src/: demangled-typename.cpp  dl-flags.cpp  dl.cpp  print.cpp  timed-cpu.cpp  trace.cpp  type-erasure.cpp
src/src/io/: csv.cpp
src/src/pcm/: counters.cpp
src/src/perfetto/: trace.cpp
src/src/quadmath/: quadmath-print.cpp
test/: CMakeLists.txt  test-any-ptr.cpp  test-callback-streambuf.cpp  test-duration-parse.cpp  test-lut.cpp  test-mat-view.cpp  test-print.cpp  test-set-intersection.cpp  test-string-util.cpp  test-tag-invoke.cpp  test-type-erasure.cpp  try_compile-zip.cpp
test/blas/: test-hl-blas-interface.cpp
test/io/: test-csv.cpp
test/linalg/: test-eigen.cpp  test-sparsity-coo.cpp  test-sparsity-csc.cpp  test-sparsity-dense.cpp  test-sparsity.hpp
test/python/: CMakeLists.txt  matrix_view.py.cpp  test_matrix_view.py  test_matrix_view_const.py  test_matrix_view_mut.py
test/test-util/: eigen-matchers.hpp
test_package/: CMakeLists.txt  conanfile.py
(+3116 files in other folders)
